test/fail/tuple_immutable.zn
# ERRORS: 2

func main() {
    let t = (10, 20)
    t._0 = 100
    t._1 = 200
    0
}
